# binaryview-reverse_engineering

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp
src/analysis/: entropy.hpp  iat_reconstructor.hpp  overlay.hpp  pattern_scanner.hpp  rich_header.hpp  string_extractor.hpp  triage.hpp
src/core/: file_mapper.hpp  pe_parser.hpp  pe_types.hpp
src/disasm/: disassembler.hpp
src/export/: json_exporter.hpp
src/viz/: memory_map.hpp  tui.hpp
tests/: CMakeLists.txt  test_entropy.cpp  test_main.cpp  test_pe_parser.cpp
